WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235011
[LFC][IFC] imported/w3c/web-platform-tests/css/css-text/word-break/word-break-normal-ar-000.html fails with incorrect run position
https://bugs.webkit.org/show_bug.cgi?id=235011
Summary
[LFC][IFC] imported/w3c/web-platform-tests/css/css-text/word-break/word-break...
alan
Reported
2022-01-08 19:01:42 PST
ssia.
Attachments
Patch
(12.16 KB, patch)
2022-01-08 19:27 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(12.95 KB, patch)
2022-01-09 07:25 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(16.96 KB, patch)
2022-01-10 05:09 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(15.47 KB, patch)
2022-01-14 20:28 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-01-08 19:27:28 PST
Created
attachment 448693
[details]
Patch
Antti Koivisto
Comment 2
2022-01-08 23:07:25 PST
Comment on
attachment 448693
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=448693&action=review
> Source/WebCore/layout/formattingContexts/inline/text/TextUtil.h:47 > + enum class UseTrailingWhitespaceMeasuringQuirk : uint8_t { Yes, No };
It is more like an optimization rather than quirk. It would be good to add a comment that explains what this does and why it is ok in LTR.
alan
Comment 3
2022-01-09 07:25:59 PST
Created
attachment 448702
[details]
Patch
alan
Comment 4
2022-01-10 05:09:45 PST
Created
attachment 448735
[details]
Patch
alan
Comment 5
2022-01-14 20:28:43 PST
Created
attachment 449240
[details]
Patch
EWS
Comment 6
2022-01-15 05:37:57 PST
Committed
r288055
(
246075@main
): <
https://commits.webkit.org/246075@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449240
[details]
.
Radar WebKit Bug Importer
Comment 7
2022-01-15 05:38:17 PST
<
rdar://problem/87637264
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug